testdata/baselines/reference/submodule/compiler/jsFileCompilationTypeParameterSyntaxOfClassExpression.errors.txt
a.js(1,13): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    const Bar = class<T> {};
                ~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    